@@ -17,6 +17,8 @@ is({ tune_to_tab('C D Db E Gb F G B Bb A', max_bends => 2) }->{richter},
 # We test that we’re using 3 in the output and not -2.
 is({ tune_to_tab("CEGC'''") }->{richter}, { C => [[1, 2, 3, 10]] });
 
+is({ tune_to_tab('CDEGA>F#>>C') }->{melody_maker}, { G => [[1, -1, 2, -2, 3, -5, 10]] });
+
 {
   my %t = tune_to_tab('C');
   ok(exists $t{richter});
